[#19]. Use Case update information user.
* Implement use case update information user.
* Implement EndPoint user update.
