# app/services/simulator-api/handlers/v1/user.go
@@ -12,6 +12,7 @@ import (
 	"device-simulator/business/web/middlewares/common"
 	"device-simulator/business/web/responses"
 	"device-simulator/business/web/webmodels"
+	"fmt"
 	"net/http"
 	"strings"
 
@@ -41,6 +42,7 @@ func NewUserServiceGroup(app *echo.Group, prefix string, handlers User) {
 	users.POST("", handlers.Create)
 	users.POST("/activate/:activateToken", handlers.Activate)
 	users.GET("", handlers.Detail, handlers.cfg.JWTConfig, handlers.cfg.AuthorizationUser)
+	users.PUT("", handlers.Update, handlers.cfg.JWTConfig, handlers.cfg.AuthorizationUser)
 }
 
 // Create user create EndPoint.
@@ -107,7 +109,7 @@ func (h User) Activate(ctx echo.Context) error {
 // @Param Authorization header string true "Authentication header"
 // @Produce json
 // @Success 200 {object} responses.SuccessUser
-// @Failure 401 {object} responses.Validator
+// @Failure 401 {object} responses.Failed
 // @Failure 500 {object} responses.Failed
 // @Security ApiKeyAuth
 // @Router /api/v1/users [get].
@@ -115,4 +117,40 @@ func (h User) Detail(ctx echo.Context) error {
 	user, _ := ctx.Get("user").(models.User)
 
 	return ctx.JSON(http.StatusOK, responses.SuccessUser{Status: "OK", User: h.usecase.InformationUser(user)})
+}
+
+// Update user information EndPoint.
+// @Summary Update user information EndPoint
+// @Tags Users
+// @Description Update a user information in the system.
+// @Param Authorization header string true "Authentication header"
+// @Param UserUpdate body webmodels.UpdateUser true "UserUpdate"
+// @Accept json
+// @Produce json
+// @Success 200 {object} responses.Success
+// @Failure 400 {object} responses.Validator
+// @Failure 401 {object} responses.Failed
+// @Failure 500 {object} responses.Failed
+// @Security ApiKeyAuth
+// @Router /api/v1/users [put].
+func (h User) Update(ctx echo.Context) error {
+	user, _ := ctx.Get("user").(models.User)
+
+	userUpdate := new(webmodels.UpdateUser)
+
+	if err := ctx.Bind(userUpdate); err != nil {
+		if strings.Contains(err.Error(), "validator:") {
+			return ctx.JSON(http.StatusBadRequest, responses.Validator{
+				Status: "ERROR", Details: strings.Split(err.Error()[10:], ","),
+			})
+		}
+
+		return ctx.JSON(errors.ErrorHandlingUpdateUser(err, h.cfg.Log))
+	}
+
+	if err := h.usecase.UpdateInformationUser(*userUpdate, user.ID); err != nil {
+		return fmt.Errorf("%w", ctx.JSON(errors.ErrorHandlingUpdateUser(err, h.cfg.Log)))
+	}
+
+	return ctx.JSON(http.StatusOK, responses.Success{Status: "OK"})
 }
